feat: Enable SSR, simplify logo SVG, and add new favicons.

--- a/apps/consciously/src/app.html
+++ b/apps/consciously/src/app.html
@@ -4,11 +4,21 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!-- Favicon - served from static for fast loading -->
+	<link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+	<link rel="alternate icon" href="/favicon.png" type="image/png" />
+	<!-- Font preconnects -->
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<!-- Non-render-blocking font loading -->
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
-		rel="stylesheet" />
+		rel="stylesheet" media="print" onload="this.media='all'" />
+	<noscript>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
+			rel="stylesheet" />
+	</noscript>
 	%sveltekit.head%
 </head>
 
